fixed dashboard alignment and changed dashboard font

--- a/Admin-Dashboard/admindb-style.css
+++ b/Admin-Dashboard/admindb-style.css
@@ -6,6 +6,10 @@ html, body {
     width: 100%;
     margin: 0;
 }
+@font-face {
+    font-family: "title";
+    src: url(font/BitcountGridDouble_Cursive-Regular.ttf) format('truetype');
+}
 .sidebar {
     display: grid;
     position: relative;
@@ -20,16 +24,18 @@ html, body {
 .dashboard-title {
     display: flex;
     margin-left: 10%;
-    margin-top: 20px ;
+    margin-top: 20px;
+    gap: 10px;
 }
 .dashboard-title-image {
     width: 50px;
     height: 50px;
 }
 .dashboard-title-text { 
-    font-size: 42px;
-    margin-top: 0%;
-    padding-top: 0%;
+    font-size: 36px;
+    margin-top: 2px;
+    padding-top: 2px;
+    font-family: "title";
 }
 .sidebar-container {
     display: grid;
